--- a/src/index.pug
+++ b/src/index.pug
@@ -5,4 +5,4 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
     body
-        input#ahmed(type="file", name="") 
+        input#ahmed(type="file", name="" multiple) 
