--- a/src/scss/bianky/_base.scss
+++ b/src/scss/bianky/_base.scss
@@ -6,6 +6,10 @@
 
 
 
+@import '~bootstrap/dist/css/bootstrap-reboot.min.css';
+
+
+
 // --- NOTES 
 // --- THIS CUSTOM BREAK POINTS BASED ON BOOTSTRAP AND MOST POUBLAR SCREEN SIZES WEBSITES 
 // --- IF YOU WILL WORK WOTH MOBILE-FIRST THEAORY YOU SHOULD USE RESMIN MIXIN 
